Added personal profile page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,231 @@
-Hello, successful connection!
-<br><br>
-<a href="http://localhost/iwphys/git/iwphys/www-version5/publicWww/">IWP5</a>
-<br><br>
-<a href="http://localhost/PoliScrape/git/PoliScrape/publicWww">PoliScrape</a>
-<br><br>
-<a href="http://localhost/4wStatistics/">4W Statistics</a>
-<br><br>
-<a href="http://localhost/jen/">Dogs 4 Jen</a>
-<br><br>
-<a href="http://localhost/great-big-bird-race/Great-Big-Bird-Race/">Great Big Bird Race</a>
-<br><br>
-<a href="http://localhost/theremin-painter/theremin-painter.html">Theremin Painter</a>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Ryan Steed - Personal Profile</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- Custom styles for this template -->
+    <link href="css/landing-page.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">Ryan Steed</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="intro-header">
+      <div class="container">
+        <div class="intro-message">
+          <h1>Ryan Steed</h1>
+          <h3>Personal Profile</h3>
+          <hr class="intro-divider">
+          <ul class="list-inline intro-social-buttons">
+            <li class="list-inline-item">
+              <a href="https://github.com/rsteed11" class="btn btn-secondary btn-lg">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/steedryan/" class="btn btn-secondary btn-lg">
+                <i class="fa fa-linkedin fa-fw"></i>
+                <span class="network-name">Linkedin</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+
+    <!-- Page Content -->
+    <section class="content-section-a">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 mr-auto order-lg-2">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://www.iwphys.org/5/">IWP5</a></h2>
+            <p class="lead">Interactive Web Physics Version 5 is an HTML5/JavaScript/D3 physics simulation applet built for classroom use. Build and visualize physics simulations using parametric and Euler's calculations.</p>
+          </div>
+          <div class="col-lg-5 ml-auto order-lg-1">
+            <img class="img-fluid" src="img/iwp5.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="content-section-b">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-5 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Featured Project:
+              <br>
+              <a target="_blank" href="http://poliscrape-rsteed11.cloudapps.unc.edu/publicWww/">PoliScrape</a>
+            </h2>
+            <p class="lead">Facilitating research and discovery with a comprehensive resource for foreign policy archival analysis,
+PoliScrape is a web archive scraper intended to collect, search and analyze foreign policy documents.</p>
+          </div>
+          <div class="col-lg-5 mr-auto order-lg-1">
+            <img class="img-fluid" src="img/search.svg" alt="">
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+    <!-- /.content-section-b -->
+
+    <section class="content-section-a">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-5 ml-auto" style='padding-top: 100px'>
+            <img class="img-fluid" src="img/theremin-painter.png" alt="">
+          </div>
+          <div class="col-lg-5 mr-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Featured Project:
+              <br>
+              <a target="_blank" href="https://rsteed11.github.io/theremin-painter/">Theremin Painter</a>
+            </h2>
+            <p class="lead">A theremin is an electronic musical instrument that allows its musician to manipulate volume and pitch by moving their hands. As the mouse moves from left to right, the frequency of the sound and the frequency of the painter both increase. As the mouse moves from bottom to top, the volume of the sound and the size of the painter both increase. Dip the mouse into the color palette to change the painter color.</p>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+    <!-- /.content-section-a -->
+
+    <section class="content-section-b">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-5 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              About
+            </h2>
+            <p class="lead">Ryan Steed is a software engineer, quantitative model designer, subject matter analyst, and student. He is a software developer at the Laboratory for Unconventional Conflict Analysis and Simulation (<a target="_touch" href="http://css-lucas.com/">LUCAS</a>) in Duke University's Social Science Research Institute. He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.</p>
+          </div>
+          <div class="col-lg-5 mr-auto order-lg-1">
+            <img class="img-fluid" src="img/RyanSteed_Headshot.jpg" alt="">
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+    <!-- /.content-section-b -->
+
+    <aside class="banner">
+
+      <div id="contact" class="container">
+
+        <div class="row">
+          <div class="col-lg-6 my-auto">
+            <h2>Contact</h2>
+            <div class="col-md-2">
+              <br />
+              <p>ryansteed@gwu.edu</p>
+            </div>
+          </div>
+          <div class="col-lg-6 my-auto">
+            <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="#" class="btn btn-secondary btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="btn btn-secondary btn-lg">
+                  <i class="fa fa-linkedin fa-fw"></i>
+                  <span class="network-name">Linkedin</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </aside>
+    <!-- /.banner -->
+
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a href="#">Home</a>
+          </li>
+          <li class="footer-menu-divider list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="#about">About</a>
+          </li>
+          <li class="footer-menu-divider list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  </body>
+
+</html>
