--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@ PoliScrape is a web archive scraper intended to collect, search and analyze fore
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://github.com/rsteed11" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://www.linkedin.com/in/steedryan/" class="btn btn-secondary btn-lg">
                   <i class="fa fa-linkedin fa-fw"></i>
                   <span class="network-name">Linkedin</span>
                 </a>
