--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ PoliScrape is a web archive scraper intended to collect, search and analyze fore
             <a href="#contact">Contact</a>
           </li>
         </ul>
+        Page design from <a href="https://startbootstrap.com/template-overviews/landing-page/">Start Bootstrap</a>.
       </div>
     </footer>
 
