Added Project Hermes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://www.iwphys.org/5/">IWP5</a></h2>
-            <p class="lead">Interactive Web Physics Version 5 is an HTML5/JavaScript/D3 physics simulation applet built for classroom use. Build and visualize physics simulations using parametric and Euler's calculations.</p>
+            <p class="lead">
+              Interactive Web Physics Version 5 is an HTML5/JavaScript/D3 physics simulation applet built for classroom use. Build and visualize physics simulations using parametric and Euler's calculations.
+              <a href="https://github.com/ntbrock/iwphys"><i class="fa fa-github"></i></a>
+            </p>
           </div>
           <div class="col-lg-5 ml-auto order-lg-1">
             <img class="img-fluid" src="img/iwp5.png" alt="">
@@ -97,16 +100,18 @@
             <h2 class="section-heading">
               Featured Project:
               <br>
-              <a target="_blank" href="http://poliscrape-rsteed11.cloudapps.unc.edu/publicWww/">PoliScrape</a>
+              <a target="_blank" href="https://github.com/css-lucas/GAT">Project Hermes 2.0</a>
             </h2>
-            <p class="lead">Facilitating research and discovery with a comprehensive resource for foreign policy archival analysis,
-PoliScrape is a web archive scraper intended to collect, search and analyze foreign policy documents.</p>
+            <p class="lead">
+              Produced by the <a href="http://css-lucas.com/">Laboratory for Unconventional Conflict Analysis and Simulation</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision support to strategists, commanders, researchers, and educators.
+              <a href="https://github.com/css-lucas/GAT"><i class="fa fa-github"></i></a>
+            </p>
           </div>
-          <div class="col-lg-5 mr-auto order-lg-1">
-            <img class="img-fluid" src="img/search.svg" alt="">
+          <div class="col-md-4 mr-auto">
+            <img class="img-fluid" src="img/GATLogo.png" alt="">
           </div>
-
         </div>
+
 
       </div>
       <!-- /.container -->
@@ -119,22 +124,24 @@ PoliScrape is a web archive scraper intended to collect, search and analyze fore
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-5 ml-auto" style='padding-top: 100px'>
-            <img class="img-fluid" src="img/theremin-painter.png" alt="">
-          </div>
-          <div class="col-lg-5 mr-auto">
+          <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
               Featured Project:
               <br>
-              <a target="_blank" href="https://rsteed11.github.io/theremin-painter/">Theremin Painter</a>
+              <a target="_blank" href="http://poliscrape-rsteed11.cloudapps.unc.edu/publicWww/">PoliScrape</a>
             </h2>
-            <p class="lead">A theremin is an electronic musical instrument that allows its musician to manipulate volume and pitch by moving their hands. As the mouse moves from left to right, the frequency of the sound and the frequency of the painter both increase. As the mouse moves from bottom to top, the volume of the sound and the size of the painter both increase. Dip the mouse into the color palette to change the painter color.</p>
+            <p class="lead">
+              Facilitating research and discovery with a comprehensive resource for foreign policy archival analysis,
+PoliScrape is a web archive scraper intended to collect, search and analyze foreign policy documents.
+              <a href="https://github.com/rsteed11/PoliScrape"><i class="fa fa-github"></i></a>
+            </p>
           </div>
-
+          <div class="col-lg-5 ml-auto order-lg-1">
+            <img class="img-fluid" src="img/search.svg" alt="">
+          </div>
         </div>
-
       </div>
       <!-- /.container -->
 
