--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ PoliScrape is a web archive scraper intended to collect, search and analyze fore
 
     <section class="content-section-b">
 
-      <div class="container">
+      <div class="container" id="about">
 
         <div class="row">
           <div class="col-lg-5 ml-auto">
