--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </nav>
 
     <!-- Header -->
-    <header class="intro-header" id="home">
-      <div class="container">
+    <header class="intro-header">
+      <div class="container" id="home">
         <div class="intro-message">
           <h1>Ryan Steed</h1>
           <h3>Personal Profile</h3>
