--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:title" content="Ryan Steed - Personal Profile" />
     <meta property="og:url" content="https://rsteed11.github.io/"  />
     <meta property="og:image" content="img/RyanSteed_Headshot.jpg" />
+    <meta property="og:image:width" content="200" />
+<meta property="og:image:height" content="200" />
     <meta name="twitter:card" content="summary_large_image">
 
     <title>Ryan Steed - Personal Profile</title>
