--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@ PoliScrape is a web archive scraper intended to collect, search and analyze fore
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/scroll.js"></script>
     <script>
-      $(document).ready(function(){
-          $('[data-toggle="tooltip"]').tooltip();
-      });
+      // $(document).ready(function(){
+      //     $('[data-toggle="tooltip"]').tooltip();
+      // });
     </script>
 
   </body>
