--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="The personal profile and project feature page for Ryan Steed." />
     <meta name="keywords" content="Ryan Steed, Burlington, Durham, DC, Github, Ryan Brannon Steed"></meta>
     <meta property="og:description" content="Featured projects, bio, and contact information for Ryan Steed.">
     <meta name="author" content="Ryan Steed">
