--- a/index.html
+++ b/index.html
@@ -87,6 +87,59 @@
 
       <div class="container">
         <div class="row">
+          <div class="col-lg-5 ml-auto order-lg-1">
+            <img class="img-fluid" src="img/GATLogo.png" alt="">
+          </div>
+          <div class="col-lg-5 mr-auto order-lg-2">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Featured Project:
+              <br>
+              <a target="_blank" href="https://github.com/css-lucas/GAT">Project Hermes 2.0</a>
+            </h2>
+            <p class="lead">
+              Produced by the <a href="http://css-lucas.com/">Laboratory for Unconventional Conflict Analysis and Simulation</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision support to strategists, commanders, researchers, and educators.
+              <a href="https://github.com/css-lucas/GAT"><i class="fa fa-github"></i></a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="content-section-b">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-5 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://thisfits.io/">Thisfits</a></h2>
+              <p class="lead">To communalize the fashion process, the Thisfits team is building a streamlined social media app for real-time fashion <b>feedback</b>
+              and <b>documentation</b>. Thisfits features social feeds where friends and strangers can collaborate on outfits and pieces for specific <b>occasions</b> and <b>series</b>.
+              <br></br>
+              The Meteor-based mobile application utilizes a cutting-edge front- and back-end JavaScript/Cordova framework joined with MongoDB data collections, Google Maps API, and Facebook OAuth account syncing.
+            </p>
+            </p>
+          </div>
+          <div class="col-md-4 mr-auto">
+            <img class="img-fluid" src="img/thisfits.png" style="max-width: 75%" alt="">
+          </div>
+        </div>
+
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+    <!-- /.content-section-b -->
+
+    <section class="content-section-a">
+
+      <div class="container">
+        <div class="row">
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
@@ -102,64 +155,6 @@
         </div>
       </div>
       <!-- /.container -->
-    </section>
-
-    <section class="content-section-b">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-5 ml-auto">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">
-              Featured Project:
-              <br>
-              <a target="_blank" href="https://github.com/css-lucas/GAT">Project Hermes 2.0</a>
-            </h2>
-            <p class="lead">
-              Produced by the <a href="http://css-lucas.com/">Laboratory for Unconventional Conflict Analysis and Simulation</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision support to strategists, commanders, researchers, and educators.
-              <a href="https://github.com/css-lucas/GAT"><i class="fa fa-github"></i></a>
-            </p>
-          </div>
-          <div class="col-md-4 mr-auto">
-            <img class="img-fluid" src="img/GATLogo.png" alt="">
-          </div>
-        </div>
-
-
-      </div>
-      <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-b -->
-
-    <section class="content-section-a">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-5 mr-auto order-lg-2">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">
-              Featured Project:
-              <br>
-              <a target="_blank" href="http://poliscrape-rsteed11.cloudapps.unc.edu/publicWww/">PoliScrape</a>
-            </h2>
-            <p class="lead">
-              Facilitating research and discovery with a comprehensive resource for foreign policy archival analysis,
-PoliScrape is a web archive scraper intended to collect, search and analyze foreign policy documents.
-              <a href="https://github.com/rsteed11/PoliScrape"><i class="fa fa-github"></i></a>
-            </p>
-          </div>
-          <div class="col-lg-5 ml-auto order-lg-1">
-            <img class="img-fluid" src="img/search.svg" alt="">
-          </div>
-        </div>
-      </div>
-      <!-- /.container -->
-
     </section>
     <!-- /.content-section-a -->
 
