--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109682218-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-109682218-1');
+
+    ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
+  </script>
+
+
   </head>
 
   <body>
