--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Ryan Steed">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ryan Steed - Personal Profile" />
-    <meta property="og:url" content="https://rsteed11.github.io/"  />
+    <meta property="og:url" content="https://ryansteed.github.io/"  />
     <meta property="og:image" content="img/RyanSteed_Headshot.jpg" />
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
@@ -73,7 +73,7 @@
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
-              <a href="https://github.com/rsteed11" class="btn btn-secondary btn-lg"
+              <a href="https://github.com/ryansteed" class="btn btn-secondary btn-lg"
                 data-toggle="tooltip"
                 title="Independent or collaborative full-stack software development projects, packages, and algorithms."
                 data-placement="bottom">
@@ -215,7 +215,7 @@
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/rsteed11" class="btn btn-secondary btn-lg">
+                <a href="https://github.com/ryansteed" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
                 </a>
