Slight text edit

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <a target="_blank" href="https://github.com/css-lucas/GAT">Project Hermes 2.0</a>
             </h2>
             <p class="lead">
-              Produced by the <a href="http://css-lucas.com/">Laboratory for Unconventional Conflict Analysis and Simulation</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision support to strategists, commanders, researchers, and educators.
+              Produced by the <a href="http://css-lucas.com/">Laboratory for Unconventional Conflict Analysis and Simulation</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision-making support to strategists, commanders, researchers, and educators.
               <a href="https://github.com/css-lucas/GAT"><i class="fa fa-github"></i></a>
             </p>
           </div>
