--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <a href="#contact">Contact</a>
           </li>
         </ul>
-        Page design from <a href="https://startbootstrap.com/template-overviews/landing-page/">Start Bootstrap</a>.
+        CSS from <a href="https://startbootstrap.com/template-overviews/landing-page/">Start Bootstrap</a>.
       </div>
     </footer>
 
