Updated title and contact

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <p class="lead">
               Ryan Steed is a software engineer, quantitative model designer, subject matter analyst, and student.
               He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.
-              He is Lead Modeler at the Laboratory for Unconventional Conflict Analysis and Simulation (<a target="_touch" href="http://css-lucas.com/">LUCAS</a>) in Duke University's Social Science Research Institute.
+              He is Lead Developer at the Innovation Center <a target="_touch" href="http://gwinnovates.com"></a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
           <div class="col-lg-5 mr-auto order-lg-1">
@@ -209,7 +209,7 @@
             <h2>Contact</h2>
             <div class="col-md-2">
               <br />
-              <p>ryansteed@gwu.edu</br>ryan.steed@duke.edu</br></p>
+              <p>ryansteed@gwu.edu</p>
             </div>
           </div>
           <div class="col-lg-6 my-auto">
