--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <p class="lead">
               Ryan Steed is a software engineer, quantitative model designer, subject matter analyst, and student.
               He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.
-              He is Lead Developer at the Innovation Center <a target="_touch" href="http://gwinnovates.com"></a>, George Washington's student startup incubator and innovation accelerator.
+              He is Lead Developer at the <a target="_touch" href="http://gwinnovates.com">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
           <div class="col-lg-5 mr-auto order-lg-1">
