Updated about index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image:height" content="100" />
     <meta name="twitter:card" content="summary_large_image">
 
-    <title>Ryan Steed - Personal Profile</title>
+    <title>Ryan Steed - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
       <div class="container" id="home">
         <div class="intro-message">
           <h1>Ryan Steed</h1>
-          <h3>Personal Profile</h3>
+          <h3>Personal Portfolio</h3>
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
@@ -133,7 +133,7 @@
               <p class="lead">To communalize the fashion process, the Thisfits team is building a streamlined social media app for real-time fashion <b>feedback</b>
               and <b>documentation</b>. Thisfits features social feeds where friends and strangers can collaborate on outfits and pieces for specific <b>occasions</b> and <b>series</b>.
               <br></br>
-              The Meteor-based mobile application utilizes a cutting-edge front- and back-end JavaScript/Cordova framework joined with MongoDB data collections, Google Maps API, and Facebook OAuth account syncing.
+              Thisfits is currently in beta testing on iOS TestFlight with over 130 users. Sign up for the beta at <a href="http://thisfits.io">thisfits.io</a>.
             </p>
             </p>
           </div>
@@ -183,9 +183,9 @@
               About
             </h2>
             <p class="lead">
-              Ryan Steed is a software engineer, quantitative model designer, subject matter analyst, and student.
+              Ryan Steed is a software engineer, quantitative modeler, data scientist, subject matter analyst, project manager, and student.
               He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.
-              He is Lead Developer at the <a target="_touch" href="http://gwinnovates.com">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+              He is the Technology Fellow at the <a target="_touch" href="http://gwinnovates.com">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
           <div class="col-lg-5 mr-auto order-lg-1">
@@ -252,7 +252,6 @@
             <a href="#contact">Contact</a>
           </li>
         </ul>
-        CSS from <a href="https://startbootstrap.com/template-overviews/landing-page/">Start Bootstrap</a>.
       </div>
     </footer>
 
