added tamid demo

--- a/tamid.html
+++ b/tamid.html
@@ -18,9 +18,6 @@
     <li>
       Learn a little <span>style</span> with <a href="https://en.wikipedia.org/wiki/CSS">CSS</a>
     </li>
-    <li>
-      Learn about variables and programming with a Javascript game
-    </li>
   </ul>
   
   <table>
@@ -49,6 +46,8 @@
       <td>th, td</td>
     </tr>
   </table>
+  <br>
+  <div style="border-radius: 50px; width: 50px; height: 50px; background-color: grey;"></div>
   
 </body>
 </html>
