Added cool animations

--- a/tamid.html
+++ b/tamid.html
@@ -9,14 +9,29 @@
 
   <h1>My First Website</h1>
   
-  <p>Stuff we're going to do today:<p>
+  <p>Things you can build with HTML, CSS, and Javascript<p>
   
   <ul>
     <li>
-      Learn about tags and attributes in <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>
+      A <a href="https://codepen.io/davidkpiano/pen/Xempjq">swinging cat</a>
     </li>
     <li>
-      Learn a little <span>style</span> with <a href="https://en.wikipedia.org/wiki/CSS">CSS</a>
+      A <a href="https://codepen.io/ettrics/pen/WRbGRN">beautiful navbar</a>
+    </li>
+    <li>
+      An <a href="https://codepen.io/stefanweck/pen/Vbgeax">awesome simulated water droplet effect</a>
+    </li>
+    <li>
+      A <a href="https://codepen.io/davidkpiano/pen/xLKBpM">dope animation of a house</a>
+    </li>
+    <li>
+      A <a href="https://codepen.io/malcolmTLBC/pen/bVWRWg">cool dissolving portrait for your profile website</a>
+    </li>
+    <li>
+      An <a href="https://codepen.io/derossi_s/pen/yPQKpK">adorable way to navigate through a website</a>
+    </li>
+    <li>
+      And <a href="https://codepen.io/2017/popular/pens/10/">many others...</a>
     </li>
   </ul>
   
