Added data source

--- a/tote/index.html
+++ b/tote/index.html
@@ -7,8 +7,9 @@
 <br>
 <a href="sample.csv">Sample BOBino Data</a>
 <br>
-<a href="data.html">Sample Ocean Temperature Data</a>
-<br>
+<a href="data.html">Sample Ocean Temperature Data</a> 
+(<a href="ftp://ftp.ncdc.noaa.gov/pub/data/noaaglobaltemp/operational/">source</a>)
+<br> 
 <a href="config.pdf">Configuration Instructions</a>
 <br>
 <br>
